# sign-transfer

./: .gitignore  TransferMessage.cpp  types.h
algorithms/: FourQ.cpp  FourQ.h  Identity.h  KangarooTwelve.h
cmake/: CMakeLists.txt  qubic_verify_Export.h  qubic_verify_Export_Linux.h  qubic_verify_Export_Windows.h  qubic_verify_lib.cpp  qubic_verify_lib.h
